<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen2Activity">

    <ImageView
        android:id="@+id/screen2_imageview"
        android:layout_width="306dp"
        android:layout_height="244dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/item_image_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applelogoone" />

    <TextView
        android:id="@+id/screen2_name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="monospace"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen2_imageview" />

    <TextView
        android:id="@+id/screen2_price_tag"
        android:layout_width="74dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:fontFamily="monospace"
        android:text="@string/price"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen2_name_holder" />

    <TextView
        android:id="@+id/screen2_name_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/item_name_2"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen2_name_tag" />

    <TextView
        android:id="@+id/screen2_price_holder"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginStart="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/item_price_2"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen2_price_tag" />

    <Button
        android:id="@+id/screen2_button"
        android:layout_width="151dp"
        android:layout_height="65dp"
        android:layout_marginBottom="80dp"
        android:background="#000000"
        android:text="@string/buy_now"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>