<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:contentPadding="5dp"
    app:cardCornerRadius="15dp"
    app:cardMaxElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/list_item_image"
            android:layout_width="93dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/item_image"
            app:civ_border_color="#000707"
            app:civ_border_width="2dp"
            tools:src="@drawable/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@id/list_item_image"
            android:fontFamily="@font/aldrich"
            android:paddingBottom="30dp"
            android:text="@string/item_name"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textDirection="rtl"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_price"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_item_name"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/list_item_image"
            android:text="@string/item_price"
            android:textDirection="rtl"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>